src/objects/Permission_Question__c.object
<CustomObject>
    <fields>
        <fullName>ContactKey__c</fullName>
        <label>ContactKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission_Date__c</fullName>
        <label>Permission Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permission_Number__c</fullName>
        <label>Permission Number</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission_Question__c</fullName>
        <label>Permission Question</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Questions_Key__c</fullName>
        <label>Permission Questions Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission_Type__c</fullName>
        <label>Permission Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Permission Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Permission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Permission Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permission Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>